tests/ok/std-boxed-as-ptr.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let boxed = std::boxed::new<i64>(ref mut zone, 11);
  let raw = boxed.as_ptr();

  ptr_store(raw, 15);
  let total = ptr_load(raw) + boxed.get();

  zone::destroy(zone);
  return total;
}
