tests/errors/std-vec-as-mut-ptr-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var vec = std::vec::new<i64>(ref mut zone, 1);
  vec.push(11);
  let raw = vec.as_mut_ptr();
  zone::reset(ref mut zone);
  return ptr_load(raw);
}
